Add legenda.png to page

--- a/iRT.html
+++ b/iRT.html
@@ -686,6 +686,7 @@
         <tr>
           <td colspan="4" style="padding:10px">
             <img height="300px" src="testequimica/a.3-etil-5-metil-heptano.png"></img>
+            <img height="300px" src="testequimica/legenda.png">
             <br>
             Marque as opções abaixo que possuem as moléculas iguais à estrutura acima.  
           </td>
@@ -727,6 +728,7 @@
         <tr>
           <td colspan="4" style="padding:10px">
             <img height="300px" src="testequimica/a.3-etil-5-metil-heptano.png"></img>
+            <img height="300px" src="testequimica/legenda.png">
             <br>
             Marque as opções abaixo que possuem as moléculas iguais à estrutura acima.  
           </td>
@@ -768,6 +770,7 @@
         <tr>
           <td colspan="4" style="padding:10px">
             <img height="300px" src="testequimica/a.3-etil-5-metil-heptano.png"></img>
+            <img height="300px" src="testequimica/legenda.png">
             <br>
             Marque as opções abaixo que possuem as moléculas iguais à estrutura acima.  
           </td>
