--- a/iRT.html
+++ b/iRT.html
@@ -685,17 +685,17 @@
       <table style="margin:auto" id="a-quim">
         <tr>
           <td colspan="4" style="padding:10px">
-            <img height="300px" src="testequimica/a.3-etil-5-metil-heptano.png"></img>
+            <img height="300px" src="testequimica/a.3-etil-5-metil-heptano.png">
             <img height="300px" src="testequimica/legenda.png">
             <br>
             Marque as opções abaixo que possuem as moléculas iguais à estrutura acima.  
           </td>
         </tr>
         <tr>
-          <td><img src="testequimica/a.quimA.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/a.quimB.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/a.quimC.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/a.quimD.jpg" height="300px" ></img></td>
+          <td><img src="testequimica/a.quimA.jpg" height="300px" ></td>
+          <td><img src="testequimica/a.quimB.jpg" height="300px" ></td>
+          <td><img src="testequimica/a.quimC.jpg" height="300px" ></td>
+          <td><img src="testequimica/a.quimD.jpg" height="300px" ></td>
         </tr>
         <tr >
           <td><input type="checkbox" name="p_a_quimA" value="A" ></td>
@@ -727,17 +727,17 @@
       <table style="margin:auto; display:none" id="b-quim">
         <tr>
           <td colspan="4" style="padding:10px">
-            <img height="300px" src="testequimica/a.3-etil-5-metil-heptano.png"></img>
+            <img height="300px" src="testequimica/b.m-cloro-fenol.png"></img>
             <img height="300px" src="testequimica/legenda.png">
             <br>
             Marque as opções abaixo que possuem as moléculas iguais à estrutura acima.  
           </td>
         </tr>
         <tr>
-          <td><img src="testequimica/b.quimA.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/b.quimB.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/b.quimC.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/b.quimD.jpg" height="300px" ></img></td>
+          <td><img src="testequimica/b.quimA.jpg" height="300px" ></td>
+          <td><img src="testequimica/b.quimB.jpg" height="300px" ></td>
+          <td><img src="testequimica/b.quimC.jpg" height="300px" ></td>
+          <td><img src="testequimica/b.quimD.jpg" height="300px" ></td>
         </tr>
         <tr >
           <td><input type="checkbox" name="p_b_quimA" value="A" ></td>
@@ -769,17 +769,17 @@
       <table style="margin:auto; display:none;" id="c-quim">
         <tr>
           <td colspan="4" style="padding:10px">
-            <img height="300px" src="testequimica/a.3-etil-5-metil-heptano.png"></img>
+            <img height="300px" src="testequimica/c.(Z)-4-cloropent-2-eno.png">
             <img height="300px" src="testequimica/legenda.png">
             <br>
             Marque as opções abaixo que possuem as moléculas iguais à estrutura acima.  
           </td>
         </tr>
         <tr>
-          <td><img src="testequimica/c.quimA.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/c.quimB.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/c.quimC.jpg" height="300px" ></img></td>
-          <td><img src="testequimica/c.quimD.jpg" height="300px" ></img></td>
+          <td><img src="testequimica/c.quimA.jpg" height="300px" ></td>
+          <td><img src="testequimica/c.quimB.jpg" height="300px" ></td>
+          <td><img src="testequimica/c.quimC.jpg" height="300px" ></td>
+          <td><img src="testequimica/c.quimD.jpg" height="300px" ></td>
         </tr>
         <tr >
           <td><input type="checkbox" name="p_c_quimA" value="A" ></td>
