--- a/iRT.html
+++ b/iRT.html
@@ -810,7 +810,7 @@
     </form>
 
     <button id="button-chem-end" style="visibility:hidden"
-      onclick="nextStage()" >PróximoX
+      onclick="nextStage()" >Próximo
     </button>
   </section>
 
