Add chem test difficulty rating

--- a/iRT.html
+++ b/iRT.html
@@ -972,9 +972,16 @@
   <section id="tab_fim" class="ContentStage" style="display:none"> <!-- Final words -->
     <h1>Últimas perguntas:</h1>
     <form id="endForm" autocomplete="off">
-      Em uma escala de 0 a 10, sendo 0 muito fácil e 10 muito difícil,<br>
+      Em uma escala de 1 a 5, sendo 5 muito difícil e 1 muito fácil,<br>
         qual foi a sua dificuldade com os testes?
       <table style="margin:auto">
+        <tr>
+          <td><img src="images/icon_chem.png"></img></td>
+          <td style="padding:10px">
+            Comparar estruturas químicas <br>
+            <input type="number" name="p_dific_chem" min="0" max="10" >
+          </td>
+        </tr>
         <tr>
           <td><img src="images/icon_paper.png"></img></td>
           <td style="padding:10px">
