Add <label> tag to image in chem test

--- a/iRT.html
+++ b/iRT.html
@@ -692,16 +692,16 @@
           </td>
         </tr>
         <tr>
-          <td><img src="testequimica/a.quimA.jpg" height="300px" ></td>
-          <td><img src="testequimica/a.quimB.jpg" height="300px" ></td>
-          <td><img src="testequimica/a.quimC.jpg" height="300px" ></td>
-          <td><img src="testequimica/a.quimD.jpg" height="300px" ></td>
+          <td><label for="a-quim01"><img src="testequimica/a.quimA.jpg" height="300px" ></label></td>
+          <td><label for="a-quim02"><img src="testequimica/a.quimB.jpg" height="300px" ></label></td>
+          <td><label for="a-quim03"><img src="testequimica/a.quimC.jpg" height="300px" ></label></td>
+          <td><label for="a-quim04"><img src="testequimica/a.quimD.jpg" height="300px" ></label></td>
         </tr>
         <tr >
-          <td><input type="checkbox" name="p_a_quimA" value="A" ></td>
-          <td><input type="checkbox" name="p_a_quimB" value="B" ></td>
-          <td><input type="checkbox" name="p_a_quimC" value="C" ></td>
-          <td><input type="checkbox" name="p_a_quimD" value="D" ></td>
+          <td><input type="checkbox" id="a-quim01" name="p_a_quim01" value="A" ></td>
+          <td><input type="checkbox" id="a-quim02" name="p_a_quim02" value="B" ></td>
+          <td><input type="checkbox" id="a-quim03" name="p_a_quim03" value="C" ></td>
+          <td><input type="checkbox" id="a-quim04" name="p_a_quim04" value="D" ></td>
         </tr>
         <tr >
           <td colspan="4" style="padding:10px" onclick="console.log('deu certo')">
@@ -734,16 +734,16 @@
           </td>
         </tr>
         <tr>
-          <td><img src="testequimica/b.quimA.jpg" height="300px" ></td>
-          <td><img src="testequimica/b.quimB.jpg" height="300px" ></td>
-          <td><img src="testequimica/b.quimC.jpg" height="300px" ></td>
-          <td><img src="testequimica/b.quimD.jpg" height="300px" ></td>
+          <td><label for="b-quim01"><img src="testequimica/b.quimA.jpg" height="300px" ></label></td>
+          <td><label for="b-quim02"><img src="testequimica/b.quimB.jpg" height="300px" ></label></td>
+          <td><label for="b-quim03"><img src="testequimica/b.quimC.jpg" height="300px" ></label></td>
+          <td><label for="b-quim04"><img src="testequimica/b.quimD.jpg" height="300px" ></label></td>
         </tr>
         <tr >
-          <td><input type="checkbox" name="p_b_quimA" value="A" ></td>
-          <td><input type="checkbox" name="p_b_quimB" value="B" ></td>
-          <td><input type="checkbox" name="p_b_quimC" value="C" ></td>
-          <td><input type="checkbox" name="p_b_quimD" value="D" ></td>
+          <td><input type="checkbox" id="b-quim01" name="p_b_quimA" value="A" ></td>
+          <td><input type="checkbox" id="b-quim02" name="p_b_quimB" value="B" ></td>
+          <td><input type="checkbox" id="b-quim03" name="p_b_quimC" value="C" ></td>
+          <td><input type="checkbox" id="b-quim04" name="p_b_quimD" value="D" ></td>
         </tr>
         <tr>
           <td colspan="4" style="padding:10px">
@@ -776,16 +776,16 @@
           </td>
         </tr>
         <tr>
-          <td><img src="testequimica/c.quimA.jpg" height="300px" ></td>
-          <td><img src="testequimica/c.quimB.jpg" height="300px" ></td>
-          <td><img src="testequimica/c.quimC.jpg" height="300px" ></td>
-          <td><img src="testequimica/c.quimD.jpg" height="300px" ></td>
+          <td><label for="c-quim01"><img src="testequimica/c.quimA.jpg" height="300px" ></label></td>
+          <td><label for="c-quim02"><img src="testequimica/c.quimB.jpg" height="300px" ></label></td>
+          <td><label for="c-quim03"><img src="testequimica/c.quimC.jpg" height="300px" ></label></td>
+          <td><label for="c-quim04"><img src="testequimica/c.quimD.jpg" height="300px" ></label></td>
         </tr>
         <tr >
-          <td><input type="checkbox" name="p_c_quimA" value="A" ></td>
-          <td><input type="checkbox" name="p_c_quimB" value="B" ></td>
-          <td><input type="checkbox" name="p_c_quimC" value="C" ></td>
-          <td><input type="checkbox" name="p_c_quimD" value="D" ></td>
+          <td><input type="checkbox" id="c-quim01" name="p_c_quimA" value="A" ></td>
+          <td><input type="checkbox" id="c-quim02" name="p_c_quimB" value="B" ></td>
+          <td><input type="checkbox" id="c-quim03" name="p_c_quimC" value="C" ></td>
+          <td><input type="checkbox" id="c-quim04" name="p_c_quimD" value="D" ></td>
         </tr>
         <tr>
           <td colspan="4" style="padding:10px" >
