Change radio input names
p_dif_disc_chem to p_dif_disc_qui

--- a/iRT.html
+++ b/iRT.html
@@ -212,6 +212,14 @@
             <td>1<br>muito<br>fácil</td>
             <td>0<br>Não<br>Sei</td>
           </tr>
+          <tr><td>Química</td>
+            <td><input type="radio" name="p_dif_disc_qui" value="5"></td>
+            <td><input type="radio" name="p_dif_disc_qui" value="4"></td>
+            <td><input type="radio" name="p_dif_disc_qui" value="3"></td>
+            <td><input type="radio" name="p_dif_disc_qui" value="2"></td>
+            <td><input type="radio" name="p_dif_disc_qui" value="1"></td>
+            <td><input type="radio" name="p_dif_disc_qui" value="0"></td>
+          </tr>
           <tr><td>Matemática</td>
             <td><input type="radio" name="p_dif_disc_mat" value="5"></td>
             <td><input type="radio" name="p_dif_disc_mat" value="4"></td>
@@ -219,14 +227,6 @@
             <td><input type="radio" name="p_dif_disc_mat" value="2"></td>
             <td><input type="radio" name="p_dif_disc_mat" value="1"></td>
             <td><input type="radio" name="p_dif_disc_mat" value="0"></td>
-          </tr>
-          <tr><td>Química</td>
-            <td><input type="radio" name="p_dif_disc_chem" value="5"></td>
-            <td><input type="radio" name="p_dif_disc_chem" value="4"></td>
-            <td><input type="radio" name="p_dif_disc_chem" value="3"></td>
-            <td><input type="radio" name="p_dif_disc_chem" value="2"></td>
-            <td><input type="radio" name="p_dif_disc_chem" value="1"></td>
-            <td><input type="radio" name="p_dif_disc_chem" value="0"></td>
           </tr>
           <tr><td>Física</td>
             <td><input type="radio" name="p_dif_disc_fis" value="5"></td>
