Change last button name
Change Próximo to Finalizar

--- a/iRT.html
+++ b/iRT.html
@@ -1021,7 +1021,7 @@
       </div>
     </form>
     <button id="button-final-trial" style="visibility:hidden"
-    onclick="nextStage();closeFullscreen();saveProfilingData()" >Próximo</button>
+    onclick="nextStage();closeFullscreen();saveProfilingData()" >Finalizar</button>
   </section>
 
   <!-- End of trials: agradecimentos-->
