Change full screen call order
Comes earlier, after the first "next" button

--- a/iRT.html
+++ b/iRT.html
@@ -119,7 +119,8 @@
           <input type="text" name="email" placeholder="Ex: rodrigo@gmail.com" size="30"></p>
         <br>
         <div class="bottom-fixed">
-          <button type="button" onclick="removeById('div-form-1');unremoveById('div-form-2')">Próximo</button>
+          <button type="button" onclick="removeById('div-form-1');unremoveById('div-form-2');openFullscreen()">
+            Próximo</button>
         </div>
       </div>
       
@@ -670,7 +671,7 @@
         <br>
         <div class="bottom-fixed">
           <button type="button" onclick="removeById('div-form-7');unremoveById('div-form-6')">Anterior</button>
-          <button type="button" onclick="nextStage();prepMolecule(task_n);openFullscreen();
+          <button type="button" onclick="nextStage();prepMolecule(task_n);
           removeById('last-updated');">Próximo</button>
         </div>
       </div>
