--- a/iRT.html
+++ b/iRT.html
@@ -102,7 +102,7 @@
         <input type="hidden" name="corsiRt">
         <input type="hidden" name="corsiChoices">
         <input type="hidden" name="corsiTrialId">
-        <input type="hidden" name="corsiEpoch">
+        <input type="hidden" name="corsiMouseTime">
         <input type="hidden" name="corsiMouseX">
         <input type="hidden" name="corsiMouseY">
       </div>
