Fix 1st "Próximo" button
Fix 1st "Próximo" button to 200px bot, as the fullscreen is not on, and it needs to stay outside the moving taskbar

--- a/iRT.html
+++ b/iRT.html
@@ -118,7 +118,7 @@
         <p> Email (opcional): 
           <input type="text" name="email" placeholder="Ex: rodrigo@gmail.com" size="30"></p>
         <br>
-        <div class="bottom-fixed">
+        <div class="bottom-fixed" style="bottom:200px">
           <button type="button" onclick="removeById('div-form-1');unremoveById('div-form-2');openFullscreen()">
             Próximo</button>
         </div>
